; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/xmllite/extr_reader.c_reader_parse_whitespace.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/xmllite/extr_reader.c_reader_parse_whitespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i64*, i32 }

@XmlReadResume_Body = common dso_local global i64 0, align 8
@XmlNodeType_Whitespace = common dso_local global i32 0, align 4
@StringValue_LocalName = common dso_local global i32 0, align 4
@strval_empty = common dso_local global i32 0, align 4
@StringValue_QualifiedName = common dso_local global i32 0, align 4
@StringValue_Value = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*)* @reader_parse_whitespace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reader_parse_whitespace(%struct.TYPE_9__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  switch i32 %8, label %62 [
    i32 129, label %9
    i32 128, label %33
  ]

9:                                                ; preds = %1
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %11 = call i32 @reader_shrink(%struct.TYPE_9__* %10)
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 0
  store i32 128, i32* %13, align 8
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %15 = call i64 @reader_get_cur(%struct.TYPE_9__* %14)
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 1
  %18 = load i64*, i64** %17, align 8
  %19 = load i64, i64* @XmlReadResume_Body, align 8
  %20 = getelementptr inbounds i64, i64* %18, i64 %19
  store i64 %15, i64* %20, align 8
  %21 = load i32, i32* @XmlNodeType_Whitespace, align 4
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 2
  store i32 %21, i32* %23, align 8
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %25 = load i32, i32* @StringValue_LocalName, align 4
  %26 = call i32 @reader_set_strvalue(%struct.TYPE_9__* %24, i32 %25, i32* @strval_empty)
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %28 = load i32, i32* @StringValue_QualifiedName, align 4
  %29 = call i32 @reader_set_strvalue(%struct.TYPE_9__* %27, i32 %28, i32* @strval_empty)
  %30 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %31 = load i32, i32* @StringValue_Value, align 4
  %32 = call i32 @reader_set_strvalue(%struct.TYPE_9__* %30, i32 %31, i32* @strval_empty)
  br label %33

33:                                               ; preds = %1, %9
  %34 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %35 = call i32 @reader_skipspaces(%struct.TYPE_9__* %34)
  %36 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %37 = call i32 @is_reader_pending(%struct.TYPE_9__* %36)
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %33
  %40 = load i32, i32* @S_OK, align 4
  store i32 %40, i32* %2, align 4
  br label %65

41:                                               ; preds = %33
  %42 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %42, i32 0, i32 1
  %44 = load i64*, i64** %43, align 8
  %45 = load i64, i64* @XmlReadResume_Body, align 8
  %46 = getelementptr inbounds i64, i64* %44, i64 %45
  %47 = load i64, i64* %46, align 8
  store i64 %47, i64* %5, align 8
  %48 = load i64, i64* %5, align 8
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %50 = call i64 @reader_get_cur(%struct.TYPE_9__* %49)
  %51 = load i64, i64* %5, align 8
  %52 = sub nsw i64 %50, %51
  %53 = call i32 @reader_init_strvalue(i64 %48, i64 %52, i32* %4)
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %55 = load i32, i32* @StringValue_Value, align 4
  %56 = call i32 @reader_set_strvalue(%struct.TYPE_9__* %54, i32 %55, i32* %4)
  %57 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %58 = call i32 @debug_strval(%struct.TYPE_9__* %57, i32* %4)
  %59 = call i32 @TRACE(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %58)
  %60 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %61 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %60, i32 0, i32 0
  store i32 129, i32* %61, align 8
  br label %62

62:                                               ; preds = %1, %41
  br label %63

63:                                               ; preds = %62
  %64 = load i32, i32* @S_OK, align 4
  store i32 %64, i32* %2, align 4
  br label %65

65:                                               ; preds = %63, %39
  %66 = load i32, i32* %2, align 4
  ret i32 %66
}

declare dso_local i32 @reader_shrink(%struct.TYPE_9__*) #1

declare dso_local i64 @reader_get_cur(%struct.TYPE_9__*) #1

declare dso_local i32 @reader_set_strvalue(%struct.TYPE_9__*, i32, i32*) #1

declare dso_local i32 @reader_skipspaces(%struct.TYPE_9__*) #1

declare dso_local i32 @is_reader_pending(%struct.TYPE_9__*) #1

declare dso_local i32 @reader_init_strvalue(i64, i64, i32*) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debug_strval(%struct.TYPE_9__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
